force-app/main/default/objects/Account/fields/Open_Tasks_Email__c.field-meta.xml
<CustomField>
    <fullName>Open_Tasks_Email__c</fullName>
    <label>Open Tasks (Email)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>