force-app/main/default/objects/Account/fields/Open_Tasks_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Open_Tasks_Meeting__c</fullName>
    <label>Open Tasks (Meeting)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>