force-app/main/default/objects/Account/fields/Open_Tasks_Other__c.field-meta.xml
<CustomField>
    <fullName>Open_Tasks_Other__c</fullName>
    <label>Open Tasks (Other)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>