force-app/main/default/objects/Account/recordTypes/EMEA.recordType-meta.xml
<RecordType>
    <fullName>EMEA</fullName>
    <active>true</active>
    <description>All European Accounts</description>
    <label>EMEA</label>
</RecordType>