force-app/main/default/objects/Account/recordTypes/Rest_Of_The_World.recordType-meta.xml
<RecordType>
    <fullName>Rest_Of_The_World</fullName>
    <active>true</active>
    <description>Accounts outside EMEA and US</description>
    <label>Rest Of The World</label>
</RecordType>