force-app/main/default/objects/Account/recordTypes/United_States.recordType-meta.xml
<RecordType>
    <fullName>United_States</fullName>
    <active>true</active>
    <description>All US Accounts</description>
    <label>United States</label>
</RecordType>